--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_gemini: ^2.0.5
   image_picker: ^1.1.2
   dash_chat_2: ^0.0.20
+  shared_preferences: 2.2.3
 
 dev_dependencies:
   flutter_test:
